# fluent-hs

./: README.md  flake.nix  fluent.cabal
.github/workflows/: ci.yml
fluent-bundle/: fluent-bundle.cabal
fluent-bundle/Language/Fluent/: Bundle.hs  Locale.hs  Message.hs  Value.hs
fluent-bundle/test/: Main.hs
fluent-bundle/test/cases/: placeables.ftl  shared-photos.ftl
fluent-syntax/: Util.hs  fluent-syntax.cabal
fluent-syntax/Language/Fluent/Syntax/: Comment.hs  Entry.hs  Expression.hs  Identifier.hs  Literal.hs  Message.hs  Resource.hs
src/: Util.hs
src/Language/: Fluent.hs
src/Language/Fluent/: Attribute.hs  Bundle.hs  Comment.hs  Entry.hs  Expression.hs  Identifier.hs  Literal.hs  Message.hs  Placeable.hs  Resource.hs
test/: Main.hs
test/cases/: multiline.ftl  placeables.ftl
