cabal-version: 3.0
name: fluent-syntax
version: 0.1.0.0
synopsis: Haskell implementation of Project Fluent
homepage: https://github.com/ners/fluent-hs/blob/master/README.md
license: Apache-2.0
author: ners
maintainer: ners@gmx.ch
bug-reports: https://github.com/ners/fluent-hs/issues
category: System
build-type: Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ners/fluent-hs

common common
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-all-missed-specialisations
    -Wno-name-shadowing

  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    ViewPatterns

  build-depends:
    base >=4.16 && <5,
    bytestring,
    containers,
    lens,
    text,
    unordered-containers,

library
  import: common
  hs-source-dirs: .
  build-depends:
    attoparsec,
    mono-traversable,
    semi-iso,
    syntax,
    syntax-attoparsec,
    syntax-printer,

  exposed-modules:
    Language.Fluent.Syntax.Comment
    Language.Fluent.Syntax.Entry
    Language.Fluent.Syntax.Expression
    Language.Fluent.Syntax.Identifier
    Language.Fluent.Syntax.Literal
    Language.Fluent.Syntax.Message
    Language.Fluent.Syntax.Resource

  other-modules:
    Util
